Services section added

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
         </a>
 
         <!-----Offcanvas----->
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
           aria-controls="offcanvasRight">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="offcanvas offcanvas-end d-lg-none" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-          <div>
+          <div class="container mt-4">
             <div class="offcanvas-header">
               <h5 id="offcanvasRightLabel"><img src="./images/brand.svg" alt=""></h5>
               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body ">
+            <div class="offcanvas-body">
               <ul class="navbar-nav ms-auto gy-2">
                 <li class="nav-item px-lg-3">
                   <a class="nav-link text-dark" aria-current="page" href="#">Landings</a>
@@ -83,7 +83,7 @@
     </nav>
 
     <!----------Landing Section---------->
-    <section>
+    <section class="landing-section d-lg-flex align-items-center">
       <div class="row p-0 container mx-auto d-lg-flex align-items-center">
         <div class="col-lg-5 mt-3 order-lg-2">
             <img src="./images/illustration-2.png" class="img-fluid" alt="">
@@ -106,6 +106,35 @@
     </section>
   </header>
 
+  <!----------Main Section ---------->
+  <main class="my-5">
+    <!----------Services Section ---------->
+    <section class="mx-width mt-100">
+      <div class="row">
+        <div class="col-lg-4">
+          <svg class="text-primary" xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm14 1a1 1 0 11-2 0 1 1 0 012 0zM2 13a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2zm14 1a1 1 0 11-2 0 1 1 0 012 0z" clip-rule="evenodd" />
+          </svg>
+          <h4 class="display-5 mt-3 mb-2">Built for developers</h4>
+          <p class="text-muted">Landkit is built to make your life easier. Variables, build tooling, documentation, and reusable components.</p>
+        </div>
+        <div class="col-lg-4 mt-4 mt-lg-0">
+          <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="40" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z" />
+          </svg>
+          <h4 class="display-5 mt-3 mb-2">Designed to be modern</h4>
+          <p class="text-muted">Designed with the latest design trends in mind. Landkit feels modern, minimal, and beautiful.</p>
+        </div>
+        <div class="col-lg-4 mt-4 mt-lg-0">
+          <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="40" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
+          </svg>
+          <h4 class="display-5 mt-3 mb-2">Documentation for everything</h4>
+          <p class="text-muted">We've written extensive documentation for components and tools, so you never have to reverse engineer anything.</p>
+        </div>
+      </div>
+    </section>
+  </main>
   <!----------Bootstrap JS---------->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
