Resources section added

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <img src="./images/illustration-2.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-7 mt-5 my-auto text-center text-lg-start order-lg-1">
-          <h1 class="display-4">
+          <h1 class="display-5">
             Welcoming to <span class="text-primary">Landkit</span>.
           </h1>
-          <h1 class="display-4">Develop anything.</h1>
+          <h1 class="display-5">Develop anything.</h1>
           <p class="lead text-muted mt-3">Build a beautiful, modern website with flexible Bootstrap components built from scratch.</p>
           <div class="text-sm-center text-lg-start">
             <div class="btn-group mt-3" role="group" aria-label="Basic example">
@@ -109,28 +109,83 @@
   <!----------Main Section ---------->
   <main class="my-5">
     <!----------Services Section ---------->
-    <section class="mx-width mt-100">
+    <section class="mx-width mb-5 mt-100">
       <div class="row">
         <div class="col-lg-4">
           <svg class="text-primary" xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm14 1a1 1 0 11-2 0 1 1 0 012 0zM2 13a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2zm14 1a1 1 0 11-2 0 1 1 0 012 0z" clip-rule="evenodd" />
           </svg>
-          <h4 class="display-5 mt-3 mb-2">Built for developers</h4>
+          <h4 class="fs-5 fw-normal mt-3 mb-2">Built for developers</h4>
           <p class="text-muted">Landkit is built to make your life easier. Variables, build tooling, documentation, and reusable components.</p>
         </div>
         <div class="col-lg-4 mt-4 mt-lg-0">
           <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="40" viewBox="0 0 20 20" fill="currentColor">
             <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z" />
           </svg>
-          <h4 class="display-5 mt-3 mb-2">Designed to be modern</h4>
+          <h4 class="fs-5 fw-normal mt-3 mb-2">Designed to be modern</h4>
           <p class="text-muted">Designed with the latest design trends in mind. Landkit feels modern, minimal, and beautiful.</p>
         </div>
         <div class="col-lg-4 mt-4 mt-lg-0">
           <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="40" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
           </svg>
-          <h4 class="display-5 mt-3 mb-2">Documentation for everything</h4>
+          <h4 class="fs-5 fw-normal mt-3 mb-2">Documentation for everything</h4>
           <p class="text-muted">We've written extensive documentation for components and tools, so you never have to reverse engineer anything.</p>
+        </div>
+      </div>
+    </section>
+
+    <!----------Resource Section ---------->
+    <section class="mt-100 resource-section">
+      <div class="mx-width py-5 ">
+        <div class="row gx-5">
+          <div class="col-md-7 order-md-2">
+            <h4 class="fw-normal">The most useful resource
+            </h4>
+            <h4 class="fw-normal text-success">ever created for designer.</h4>
+            <p class="text-muted mt-4">Using Landkit to build your site means never worrying about designing another page or cross browser compatibility. Our ever-growing library of components and pre-designed layouts will make your life easier.</p>
+            <div class="row">
+              <div class="col-lg-6 text-muted mb-2 text-success">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" class="bg-light fs-6 p-1 text-success rounded-circle" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+                </svg>
+                <h6 class="d-inline text-success fw-normal">
+                  Lifetime updates</h6>
+              </div>
+              <div class="col-lg-6 text-muted mb-2 text-success">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" class="bg-light fs-6 p-1 text-success rounded-circle" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+                </svg>
+                <h6 class="d-inline text-success fw-normal">
+                  Lifetime updates</h6>
+              </div>
+              <div class="col-lg-6 text-muted mb-2 text-success">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" class="bg-light fs-6 p-1 text-success rounded-circle" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+                </svg>
+                <h6 class="d-inline text-success fw-normal">
+                  Lifetime updates</h6>
+              </div>
+              <div class="col-lg-6 text-muted mb-2 text-success">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" class="bg-light fs-6 p-1 text-success rounded-circle" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+                </svg>
+                <h6 class="d-inline text-success fw-normal">
+                  Lifetime updates</h6>
+              </div>
+            </div>
+          </div >
+          <div class="col-md-5 order-md-1 mt-5 mt-md-0">
+            <div class="card" style="max-width: 22rem;">
+              <img src="./images/photo-2.jpg" class="card-img-top" alt="...">
+              <div class="card-body mt-3">
+                <input type="text" class="form-control border-top-0 border-start-0 border-top-0 border-end-0 rounded-0 border-bottom-3 mb-3" placeholder="Name">
+                <input type="email" class="form-control border-top-0 border-start-0 border-top-0 border-end-0 rounded-0 border-bottom-3 mb-3" placeholder="Email">
+                <input type="password" class="form-control border-top-0 border-start-0 border-top-0 border-end-0 rounded-0 border-bottom-3 mb-3" placeholder="Password">
+                <button class="btn btn-success w-100">Send a Message</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
