Experience section added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header class="mx-width">
     <!-----Nav bar ----->
     <nav class="navbar navbar-expand-lg navbar-light py-4">
-      <div class="container ">
+      <div class="container p-0">
         <a class="navbar-brand" href="#">
           <img src="./images/brand.svg" alt="">
         </a>
@@ -85,15 +85,15 @@
     <!----------Landing Section---------->
     <section class="landing-section d-lg-flex align-items-center">
       <div class="row p-0 container mx-auto d-lg-flex align-items-center">
-        <div class="col-lg-5 mt-3 order-lg-2">
+        <div class="col-lg-5 mt-3 order-lg-2 p-0">
             <img src="./images/illustration-2.png" class="img-fluid" alt="">
         </div>
-        <div class="col-lg-7 mt-5 my-auto text-center text-lg-start order-lg-1">
+        <div class="col-lg-7 mt-5 my-auto text-center text-lg-start order-lg-1 p-0">
           <h1 class="display-5">
             Welcoming to <span class="text-primary">Landkit</span>.
           </h1>
           <h1 class="display-5">Develop anything.</h1>
-          <p class="lead text-muted mt-3">Build a beautiful, modern website with flexible Bootstrap components built from scratch.</p>
+          <p class="lead text-muted mt-3 w-75 mx-auto mx-lg-0">Build a beautiful, modern website with flexible Bootstrap components built from scratch.</p>
           <div class="text-sm-center text-lg-start">
             <div class="btn-group mt-3" role="group" aria-label="Basic example">
               <button type="button" class="btn btn-primary me-3 rounded-3  px-3 p-2">Explore More</button>
@@ -104,6 +104,11 @@
         
       </div>
     </section>
+
+    <!----------Experience Section ---------->
+    <section class="mx-width">
+
+    </section>
   </header>
 
   <!----------Main Section ---------->
@@ -111,21 +116,21 @@
     <!----------Services Section ---------->
     <section class="mx-width mb-5 mt-100">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6">
           <svg class="text-primary" xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm14 1a1 1 0 11-2 0 1 1 0 012 0zM2 13a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2zm14 1a1 1 0 11-2 0 1 1 0 012 0z" clip-rule="evenodd" />
           </svg>
           <h4 class="fs-5 fw-normal mt-3 mb-2">Built for developers</h4>
           <p class="text-muted">Landkit is built to make your life easier. Variables, build tooling, documentation, and reusable components.</p>
         </div>
-        <div class="col-lg-4 mt-4 mt-lg-0">
+        <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
           <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="40" viewBox="0 0 20 20" fill="currentColor">
             <path d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z" />
           </svg>
           <h4 class="fs-5 fw-normal mt-3 mb-2">Designed to be modern</h4>
           <p class="text-muted">Designed with the latest design trends in mind. Landkit feels modern, minimal, and beautiful.</p>
         </div>
-        <div class="col-lg-4 mt-4 mt-lg-0">
+        <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
           <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="40" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
           </svg>
@@ -186,6 +191,42 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!----------Experience Section ---------->
+    <section class="mx-width mt-100">
+      <div class="row">
+        <div class="col-lg-6">
+          <h4 class="fw-normal">We have lots of experience</h4>
+          <h4 class="text-primary fw-normal">building Bootstrap themes.</h4>
+          <p class="text-muted mt-3">We've built well over a dozen Bootstrap themes and sold tens of thousands of copies.</p>
+          <div class="row mt-4">
+            <div class="col-2 mt-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-box-seam text-primary" viewBox="0 0 16 16">
+                <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
+              </svg>
+            </div>
+            <div class="col-9">
+              <h6 class="">Deep understanding of Bootstrap</h6>
+              <p class="text-muted">We've watched Bootstrap grow up over the years and understand it better than almost anyone.</p>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col-2 mt-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-code-slash text-primary fw-bold" viewBox="0 0 16 16">
+                <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
+              </svg>
+            </div>
+            <div class="col-9">
+              <h6 class="">Bootstrap users since the beginning</h6>
+              <p class="text-muted">We've been developing with Bootstrap since it was publicly released in 2011.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mt-5 mt-lg-0">
+          <img src="./images/dashkit.jpg" class="screenshot img-fluid experience-desktop-img" alt="">
         </div>
       </div>
     </section>
