--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
   <!----------Custom CSS ---------->
   <link rel="stylesheet" href="style.css">
 
-  <title>Document</title>
+  <title>landkit | web</title>
 </head>
 
 <body>
 
 
   <!----------Header Section---------->
-
   <header class="mx-width">
     <!-----Nav bar ----->
     <nav class="navbar navbar-expand-lg navbar-light py-4">
@@ -103,11 +102,6 @@
         </div>
         
       </div>
-    </section>
-
-    <!----------Experience Section ---------->
-    <section class="mx-width">
-
     </section>
   </header>
 
