--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="text-center">
         <h2 class="display-6 mb-3">Our customers are our biggest fans.</h2>
         <p class="text-muted mb-0">We don't like to brag, but we don't mind letting our customers do it for us.</p>
-          <p class="text-muted "> Here are a few nice things folks
+        <p class="text-muted "> Here are a few nice things folks
           have said about our themes over the years.</p>
       </div>
       <div class="mt-5">
@@ -283,9 +283,10 @@
                   <img src="./images/c1.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 text-center mt-4 py-3 px-4">
-                  <img src="./images/logos/rakuten.svg" alt="">
+                  <img src="./images/rakuten.svg" alt="">
                   <blockquote class="blockquote mt-3">
-                    <p class="fs-6 px-5">Landkit is hands down the most useful front end Bootstrap theme I've ever used. I can't wait to use it again for my next project.</p>
+                    <p class="fs-6 px-5">Landkit is hands down the most useful front end Bootstrap theme I've ever used.
+                      I can't wait to use it again for my next project.</p>
                   </blockquote>
                   <h6 class="text-muted">Mr. Russo</h6>
                 </div>
@@ -297,27 +298,34 @@
                   <img src="./images/c2.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 text-center mt-4 py-3 p-4">
-                  <img src="./images/logos/amazon.svg" alt="">
+                  <img src="./images/amazon.svg" alt="">
                   <blockquote class="blockquote mt-3">
-                    <p class="fs-6 py-2 px-4">I've never used a theme as versatile and flexible as Landkit. It's my go to for building landing sites on almost any project.</p>
+                    <p class="fs-6 py-2 px-4">I've never used a theme as versatile and flexible as Landkit. It's my go
+                      to for building landing sites on almost any project.</p>
                   </blockquote>
                   <h6 class="text-muted">Mr. Turrul</h6>
                 </div>
               </div>
             </div>
-            
+
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" class="bg-primary rounded-circle p-3" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd" />
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+            data-bs-slide="prev">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" class="bg-primary rounded-circle p-3" viewBox="0 0 20 20"
+              fill="currentColor">
+              <path fill-rule="evenodd"
+                d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z"
+                clip-rule="evenodd" />
             </svg>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" class="bg-primary rounded-circle p-3" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+            data-bs-slide="next">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" class="bg-primary rounded-circle p-3" viewBox="0 0 20 20"
+              fill="currentColor">
+              <path fill-rule="evenodd"
+                d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z"
+                clip-rule="evenodd" />
             </svg>
             <span class="visually-hidden">Next</span>
           </button>
@@ -325,6 +333,7 @@
       </div>
     </section>
   </main>
+
   <!----------Bootstrap JS---------->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
