--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
             <div class="carousel-item active">
               <div class="row rounded-3">
                 <div class="col-lg-6">
-                  <img src="./images/c1.jpg" class="img-fluid" alt="">
+                  <img src="./images/c1.jpg" class="img-fluid h-100" alt="">
                 </div>
-                <div class="col-lg-6 text-center mt-4 py-3 px-4">
+                <div class="col-lg-6 text-center mt-3 py-3 pt-5 px-4">
                   <img src="./images/rakuten.svg" alt="">
                   <blockquote class="blockquote mt-3">
                     <p class="fs-6 px-5">Landkit is hands down the most useful front end Bootstrap theme I've ever used.
@@ -295,11 +295,11 @@
             <div class="carousel-item">
               <div class="row shadow-lg rounded-3">
                 <div class="col-lg-6">
-                  <img src="./images/c2.jpg" class="img-fluid" alt="">
+                  <img src="./images/c2.jpg" class="img-fluid h-100" alt="">
                 </div>
-                <div class="col-lg-6 text-center mt-4 py-3 p-4">
+                <div class="col-lg-6 text-center mt-3 py-3 pt-5 p-4">
                   <img src="./images/amazon.svg" alt="">
-                  <blockquote class="blockquote mt-3">
+                  <blockquote class="blockquote mt-3 pb-2">
                     <p class="fs-6 py-2 px-4">I've never used a theme as versatile and flexible as Landkit. It's my go
                       to for building landing sites on almost any project.</p>
                   </blockquote>
