--- a/index.html
+++ b/index.html
@@ -282,13 +282,16 @@
                 <div class="col-lg-6">
                   <img src="./images/c1.jpg" class="img-fluid h-100" alt="">
                 </div>
-                <div class="col-lg-6 text-center mt-3 py-3 pt-5 px-4">
-                  <img src="./images/rakuten.svg" alt="">
-                  <blockquote class="blockquote mt-3 pb-4">
-                    <p class="fs-6 px-5">Landkit is hands down the most useful front end Bootstrap theme I've ever used.
-                      I can't wait to use it again for my next project.</p>
-                  </blockquote>
-                  <h6 class="text-muted">Mr. Russo</h6>
+                <div class="col-lg-6 text-center mt-3">
+                  <div style="height: 250px;" class="mt-5">
+                    <img src="./images/rakuten.svg" alt="">
+                    <blockquote class="blockquote mt-3 pb-4">
+                      <p class="fs-6 px-5">Landkit is hands down the most useful front end Bootstrap theme I've ever
+                        used.
+                        I can't wait to use it again for my next project.</p>
+                    </blockquote>
+                    <h6 class="text-muted">Mr. Russo</h6>
+                  </div>
                 </div>
               </div>
             </div>
@@ -297,13 +300,15 @@
                 <div class="col-lg-6">
                   <img src="./images/c2.jpg" class="img-fluid h-100" alt="">
                 </div>
-                <div class="col-lg-6 text-center mt-3 py-3 pt-5 px-4">
-                  <img src="./images/amazon.svg" alt="">
-                  <blockquote class="blockquote mt-3 pb-2">
-                    <p class="fs-6 py-2 px-4">I've never used a theme as versatile and flexible as Landkit. It's my go
-                      to for building landing sites on almost any project.</p>
-                  </blockquote>
-                  <h6 class="text-muted">Mr. Turrul</h6>
+                <div class="col-lg-6 text-center mt-3">
+                  <div style="height: 250px;" class="mt-5">
+                    <img src="./images/amazon.svg" alt="">
+                    <blockquote class="blockquote mt-3 pb-2">
+                      <p class="fs-6 py-2 px-4">I've never used a theme as versatile and flexible as Landkit. It's my go
+                        to for building landing sites on almost any project.</p>
+                    </blockquote>
+                    <h6 class="text-muted">Mr. Turrul</h6>
+                  </div>
                 </div>
               </div>
             </div>
