Landing heading edited

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <h1 class="display-5">
             Welcoming to <span class="text-primary">Landkit</span>.
           </h1>
-          <h1 class="display-5">Develop anything.</h1>
+          <h1 class="display-6">Develop Anything.</h1>
           <p class="lead text-muted mt-3 w-75 mx-auto mx-lg-0">Build a beautiful, modern website with flexible Bootstrap
             components built from scratch.</p>
           <div class="text-sm-center text-lg-start">
@@ -285,8 +285,8 @@
                 <div class="col-lg-6 text-center mt-3">
                   <div style="height: 250px;" class="mt-5">
                     <img src="./images/rakuten.svg" alt="">
-                    <blockquote class="blockquote mt-3 pb-4">
-                      <p class="fs-6 px-5">Landkit is hands down the most useful front end Bootstrap theme I've ever
+                    <blockquote class="blockquote mt-3 pb-3">
+                      <p class="fs-6 py-2 px-5">Landkit is hands down the most useful front end Bootstrap theme I've ever
                         used.
                         I can't wait to use it again for my next project.</p>
                     </blockquote>
@@ -303,8 +303,8 @@
                 <div class="col-lg-6 text-center mt-3">
                   <div style="height: 250px;" class="mt-5">
                     <img src="./images/amazon.svg" alt="">
-                    <blockquote class="blockquote mt-3 pb-2">
-                      <p class="fs-6 py-2 px-4">I've never used a theme as versatile and flexible as Landkit. It's my go
+                    <blockquote class="blockquote mt-3 pb-3">
+                      <p class="fs-6 py-2 px-5">I've never used a theme as versatile and flexible as Landkit. It's my go
                         to for building landing sites on almost any project.</p>
                     </blockquote>
                     <h6 class="text-muted">Mr. Turrul</h6>
