Landing section updated

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
 
     <!----------Landing Section---------->
-    <section class="landing-section d-lg-flex align-items-center">
+    <section class="landing-section d-flex align-items-center">
       <div class="row p-0 container mx-auto d-lg-flex align-items-center">
         <div class="col-lg-5 mt-3 order-lg-2 p-0">
           <img src="./images/illustration-2.png" class="img-fluid" alt="">
@@ -111,7 +111,7 @@
   <!----------Main Section ---------->
   <main class="my-5">
     <!----------Services Section ---------->
-    <section class="mx-width mb-5 mt-100">
+    <section class="mx-width mb-5 mt-80">
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <svg class="text-primary" xmlns="http://www.w3.org/2000/svg" width="40" viewBox="0 0 20 20"
@@ -316,7 +316,7 @@
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
             data-bs-slide="prev">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" class="bg-primary rounded-circle p-3" viewBox="0 0 20 20"
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" class="bg-primary rounded-circle p-2" viewBox="0 0 20 20"
               fill="currentColor">
               <path fill-rule="evenodd"
                 d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z"
@@ -326,7 +326,7 @@
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
             data-bs-slide="next">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" class="bg-primary rounded-circle p-3" viewBox="0 0 20 20"
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" class="bg-primary rounded-circle p-2" viewBox="0 0 20 20"
               fill="currentColor">
               <path fill-rule="evenodd"
                 d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z"
