Stay focused section added

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <!----------Landing Section---------->
     <section class="landing-section d-flex align-items-center">
       <div class="row p-0 container mx-auto d-lg-flex align-items-center">
-        <div class="col-lg-5 mt-3 order-lg-2 p-0">
+        <div class="col-lg-5 order-lg-2 p-0">
           <img src="./images/illustration-2.png" class="img-fluid" alt="">
         </div>
-        <div class="col-lg-7 mt-5 my-auto text-center text-lg-start order-lg-1 p-0">
+        <div class="col-lg-7 mt-3 my-auto text-center text-lg-start order-lg-1 p-0">
           <h1 class="display-5">
             Welcoming to <span class="text-primary">Landkit</span>.
           </h1>
@@ -334,6 +334,34 @@
             </svg>
             <span class="visually-hidden">Next</span>
           </button>
+        </div>
+      </div>
+    </section>
+
+    <!----------Focused Section---------->
+    <section class="focused mt-100">
+      <div class="row mx-width g-5">
+        <div class="col-md-6 order-lg-2">
+          <img src="./images/illustration-8.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-md-6 order-lg-1">
+          <h3 class="fw-normal">Stay focused on your business.</h3>
+          <h3 class="fw-normal text-primary mb-3"><span>Let us handle the design</span>.</h3>
+          <p class="text-muted fs-5 fw-light">You have a business to run. Stop worring about cross-browser bugs, designing new pages, keeping your components up to date. Let us do that for you.</p>
+          <div class="row mt-5">
+            <div class="col-4">
+              <h6 class="fw-normal">100%</h6>
+              <p class="text-muted">Satisfaction</p>
+            </div>
+            <div class="col-4">
+              <h6 class="fw-normal">24/7</h6>
+              <p class="text-muted">Support</p>
+            </div>
+            <div class="col-4">
+              <h6 class="fw-normal">100k</h6>
+              <p class="text-muted">Sale</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
