--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </header>
 
   <!----------Main Section ---------->
-  <main class="my-5">
+  <main class="mt-5 mb-3">
     <!----------Services Section ---------->
     <section class="mx-width mb-5 mt-80">
       <div class="row">
@@ -286,7 +286,8 @@
                   <div style="height: 250px;" class="mt-5">
                     <img src="./images/rakuten.svg" alt="">
                     <blockquote class="blockquote mt-3 pb-3">
-                      <p class="fs-6 py-2 px-5">Landkit is hands down the most useful front end Bootstrap theme I've ever
+                      <p class="fs-6 py-2 px-5">Landkit is hands down the most useful front end Bootstrap theme I've
+                        ever
                         used.
                         I can't wait to use it again for my next project.</p>
                     </blockquote>
@@ -347,7 +348,8 @@
         <div class="col-md-6 order-lg-1">
           <h3 class="fw-normal">Stay focused on your business.</h3>
           <h3 class="fw-normal text-primary mb-3"><span>Let us handle the design</span>.</h3>
-          <p class="text-muted fs-5 fw-light">You have a business to run. Stop worring about cross-browser bugs, designing new pages, keeping your components up to date. Let us do that for you.</p>
+          <p class="text-muted fs-5 fw-light">You have a business to run. Stop worring about cross-browser bugs,
+            designing new pages, keeping your components up to date. Let us do that for you.</p>
           <div class="row mt-5">
             <div class="col-4">
               <h6 class="fw-normal">100%</h6>
@@ -365,8 +367,253 @@
         </div>
       </div>
     </section>
+
+    <!----------Pricing Section---------->
+    <section class="pricing">
+      <div class="mx-width">
+        <div class="text-center">
+          <h2 class="fw-light display-4 mb-4">Fair, simple pricing for all.</h2>
+          <p class="text-muted fs-5 mb-0">All types of businesses need access to development resources, <br
+              class="d-none d-md-block"> so we give you the option to decide how much you need to use.</p>
+        </div>
+        <div class="container card-group mt-5">
+          <div class="card bg-white card-standard rounded-3 border-0">
+            <div class="card-body">
+              <div class="text-center">
+                <button class="btn btn-light text-primary rounded-pill my-3 px-3">Standard</button>
+                <h5>$ <span class="fs-3">29</span> /mo</h5>
+              </div>
+              <ul class="text-center ps-0">
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+              </ul>
+            </div>
+            <div class="text-center mb-4 px-4">
+              <button class="btn btn-primary w-100 py-3 rounded-bottom rounded-0">Get it now</button>
+            </div>
+          </div>
+          <div class="card bg-white border-0 mt-3 mt-md-0 rounded-3">
+            <div class="card-body">
+              <div class="text-center">
+                <button class="btn btn-light text-primary rounded-pill my-3 px-3">Standard</button>
+                <h5>$ <span class="fs-3">29</span> /mo</h5>
+              </div>
+              <ul class="text-center ps-0">
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+                <li class="list-group-item border-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-primary bg-light rounded-circle"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Rich, responsive landing pages
+                </li>
+              </ul>
+            </div>
+            <div class="text-center mb-4 px-4">
+              <button class="btn btn-light text-primary w-100 py-3 rounded-bottom rounded-0">Get it now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!----------FAQ Section---------->
+    <section class="faq">
+      <div class="mx-width">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-success" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                </svg>
+              </div>
+              <div class="col-10">
+                <h6 class="fs-6">Can I use Landkit for my clients?</h6>
+                <p class="text-muted">Absolutely. The Bootstrap Themes license allows you to build a website for personal use or for a client.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-success" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                </svg>
+              </div>
+              <div class="col-10">
+                <h6 class="fs-6">Can I use Landkit for my clients?</h6>
+                <p class="text-muted">Absolutely. The Bootstrap Themes license allows you to build a website for personal use or for a client.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-success" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                </svg>
+              </div>
+              <div class="col-10">
+                <h6 class="fs-6">Can I use Landkit for my clients?</h6>
+                <p class="text-muted">Absolutely. The Bootstrap Themes license allows you to build a website for personal use or for a client.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" class="text-success" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                </svg>
+              </div>
+              <div class="col-10">
+                <h6 class="fs-6">Can I use Landkit for my clients?</h6>
+                <p class="text-muted">Absolutely. The Bootstrap Themes license allows you to build a website for personal use or for a client.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center mt-5">
+          <button class="btn btn-outline-secondary text-white border-1 rounded-pill fw-light fs-6">Get Started</button>
+          <h2 class="fw-normal mt-3 fs-3">Get Landkit and save your time.</h2>
+          <p class="text-muted">Stop wasting time trying to do it the "right way" and build a site from scratch. <br class="d-none d-md-block"> Landkit is faster, easier, and you still have complete control.</p>
+          <a href="" class="btn btn-success px-3 py-2 mt-3">Buy Now
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
   </main>
 
+  <!----------Footer------------>
+  <footer class="mx-width py-4">
+    <div class="row">
+      <div class="col-12 col-md-3">
+        <img src="./images/brand.svg" alt="">
+        <h6 class="fw-light mt-1">A better way to build.</h6>
+        <div class="">
+          <i class="fab fa-facebook-square pe-2 text-secondary"></i>
+          <i class="fab fa-instagram pe-2 text-secondary"></i>
+          <i class="fab fa-twitter pe-2 text-secondary"></i>
+          <i class="fab fa-youtube pe-2 text-secondary"></i>
+        </div>
+      </div>
+      <div class="col-md-3 mt-4 mt-lg-0">
+        <h6 class="fs-6 fw-light">PRODUCTS</h6>
+        <ul class="px-0">
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Page Builder</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">UI Kit</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Styleguide</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Documentation</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 mt-4 mt-lg-0">
+        <h6 class="fs-6 fw-light">PRODUCTS</h6>
+        <ul class="px-0">
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Page Builder</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">UI Kit</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Styleguide</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Documentation</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 mt-4 mt-lg-0">
+        <h6 class="fs-6 fw-light">PRODUCTS</h6>
+        <ul class="px-0">
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Page Builder</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">UI Kit</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Styleguide</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Documentation</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
+  <!----------Fontawesome JS---------->
+  <script src="https://kit.fontawesome.com/55cc37c967.js" crossorigin="anonymous"></script>
   <!----------Bootstrap JS---------->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
