Footer edited a little bit

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
     </section>
 
     <!----------FAQ Section---------->
-    <section class="faq">
+    <section id="faq" class="faq">
       <div class="mx-width">
         <div class="row">
           <div class="col-md-6">
@@ -575,14 +575,14 @@
       <div class="col-12 col-md-3">
         <img src="./images/brand.svg" alt="">
         <h6 class="fw-light mt-1">A better way to build.</h6>
-        <div class="">
+        <div class="fs-5">
           <i class="fab fa-facebook-square pe-2 text-secondary"></i>
           <i class="fab fa-instagram pe-2 text-secondary"></i>
           <i class="fab fa-twitter pe-2 text-secondary"></i>
           <i class="fab fa-youtube pe-2 text-secondary"></i>
         </div>
       </div>
-      <div class="col-md-3 mt-4 mt-lg-0">
+      <div class="col-md-3 col-sm-4 mt-4 mt-md-0">
         <h6 class="fs-6 fw-light">PRODUCTS</h6>
         <ul class="px-0">
           <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Page Builder</a></li>
@@ -591,17 +591,17 @@
           <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Documentation</a></li>
         </ul>
       </div>
-      <div class="col-md-3 mt-4 mt-lg-0">
-        <h6 class="fs-6 fw-light">PRODUCTS</h6>
+      <div class="col-md-3 col-sm-4 mt-4 mt-md-0">
+        <h6 class="fs-6 fw-light">SERVICES</h6>
         <ul class="px-0">
-          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Page Builder</a></li>
-          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">UI Kit</a></li>
-          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Styleguide</a></li>
           <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Documentation</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Changelog</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Styleguide</a></li>
+          <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Pagebuilder</a></li>
         </ul>
       </div>
-      <div class="col-md-3 mt-4 mt-lg-0">
-        <h6 class="fs-6 fw-light">PRODUCTS</h6>
+      <div class="col-md-3 col-sm-4 mt-4 mt-md-0">
+        <h6 class="fs-6 fw-light">CONNECT</h6>
         <ul class="px-0">
           <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">Page Builder</a></li>
           <li class="list-group-item border-0 px-0 py-1"><a class="text-decoration-none text-muted" href="">UI Kit</a></li>
